--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Run python tests
 
 on:
   push:
-    branches: ["hw4"]
+    branches: ["main"]
   pull_request:
     branches: ["main"]
 
@@ -24,5 +24,7 @@ jobs:
         uses: abatilo/actions-poetry@v2
       - name: Install dependencies with poetry
         run: poetry install
+      - name: Run tests
+        run: poetry run pytest -vv --strict --showlocals
       - name: Run lecture 4 tests
-        run: poetry run pytest -vv --strict --showlocals --cov=lecture_4/demo_service ./tests/lecture_4/hw
+        run: poetry run pytest -vv --strict --showlocals --cov=lecture_4/demo_service ./tests/lecture_4/hw/*.py
