--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hse-python-backend"
+name = "hw_2"
 version = "0.1.0"
 description = ""
 authors = ["Ilya Katun <katun.ilya@gmail.com>"]
@@ -10,17 +10,15 @@ python = "^3.12"
 uvicorn = "^0.30.6"
 fastapi = "^0.114.2"
 requests = "^2.32.3"
-grpcio = "^1.66.1"
-grpcio-tools = "^1.66.1"
-websockets = "^13.1"
-websocket-client = "^1.8.0"
+faker = "^30.1.0"
+httpx = "^0.27.2"
+flake8 = "^7.1.1"
+mypy = "^1.11.2"
 prometheus-fastapi-instrumentator = "^7.0.0"
-pika = "^1.3.2"
-confluent-kafka = "^2.6.0"
-
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.5"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.test.dependencies]
@@ -36,3 +34,6 @@ responses = "^0.25.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+ignore_missing_imports = true
