--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Install dependencies with poetry
         run: poetry install
       - name: Run lecture 4 tests
-        run: poetry run pytest -vv --strict --showlocals --cov=lecture_4/demo_service ./tests/lecture_4/hw
+        run: poetry run pytest -vv --strict --showlocals --cov=hw_4/demo_service ./tests/lecture_4/hw
