--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[tool.poetry.packages] 
+include = "hw_4"  
