hw-4: added ddoser

--- a/lecture_2/docker-compose.yaml
+++ b/lecture_2/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
   prometheus:
     image: prom/prometheus
     volumes:
-      - ./prometheus.yml:/etc/prometheus.yml
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
@@ -22,4 +22,3 @@ services:
     ports:
       - 9090:9090
     restart: always
-    
